fix:ai返回结果插不进数据库